--- a/src/App/styles/mainstyles.scss
+++ b/src/App/styles/mainstyles.scss
@@ -1,7 +1,9 @@
 @import './reset.scss';
+
 * {
     box-sizing: border-box;
     color: white;
+    font-family: 'Roboto', serif
 }
 
 $actionbar-height: 64px;
@@ -20,7 +22,7 @@ body,
 
 .app {
     height: 100%;
-    background: #111;
+    background: black;
     display: flex;
     flex-direction: column;
 }
@@ -38,6 +40,7 @@ body,
 }
 
 .main-content {
+    position: relative;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -45,6 +48,7 @@ body,
 }
 
 .center {
+    position: relative;
     padding:10px;
     flex: 1;
     overflow-y: auto;
@@ -66,6 +70,8 @@ body,
     background: lighten(#262228, 8);
 }
 
+
+
 //Could Hide
 .side {
     display: none;
@@ -75,7 +81,7 @@ body,
 
 @media screen and (min-width:750px) and (max-width:1020px){
     .center{
-        margin:0 10% 0 10%;
+        // margin:0 10% 0 10%;
     }
 }
 
@@ -88,7 +94,7 @@ body,
         background: red;
     }
     .side {
-        background: blue;
+        background: #CCC;
         position: relative;
         order: inherit;
         width: $side-panel-width;
@@ -102,5 +108,10 @@ body,
     }
     .center {
         flex: 1;
+    }
+
+    .toggle-bar .toggle{
+        width:50% !important;
+        margin:auto;
     }
 }
