Added the filter drawer, so it only opens on the Pages, need to make it a HOC so it can contain different elements for different pages

--- a/src/App/styles/mainstyles.scss
+++ b/src/App/styles/mainstyles.scss
@@ -33,11 +33,11 @@ body,
     max-height: $actionbar-height;
 }
 
-.nav-bar {
-    min-height: $navbar-height;
-    height: $navbar-height;
-    max-height: $navbar-height;
-}
+// .nav-bar {
+//     min-height: $navbar-height;
+//     height: $navbar-height;
+//     max-height: $navbar-height;
+// }
 
 .main-content {
     position: relative;
