Allowed for es6 function inside react and almost finished add username modal. Some Validation to finish

--- a/src/App/Components/Drawers/adddraw.scss
+++ b/src/App/Components/Drawers/adddraw.scss
@@ -1,5 +1,7 @@
 .add-profile-draw{
     width:80%!important;
+
+    overflow-y: auto;
     
     
     
@@ -29,12 +31,20 @@
         div{            
             flex:1;
         }
+        
+        .miTest div div div{
+            color:pink!important;
+        }
+        
 
     }
 
     .gender-control{
         border:2px solid aqua;
+
     }
+
+    
   
 
     
